k8s/artlab-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.12.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: artlab
  name: artlab
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: artlab
    spec:
      containers:
      - args:
        - nginx
        - -g
        - daemon off;
        image: artlab
        name: artlab
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.1"
            memory: "100Mi"
          limits:
            cpu: "0.3"
            memory: "200Mi"
      restartPolicy: Always
status: {}
