k8s/artlab-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.12.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: artlab-api
  name: artlab-api
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: artlab-api
status:
  loadBalancer: {}
