k8s/artlab-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: artlab-api-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: artlab-api.jijin.us
    http:
      paths:
      - path: /
        backend:
          serviceName: artlab-api
          servicePort: 3000
