k8s/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jenkins.jijin.us
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
